# NMaskGen_Snakemake

./: .gitignore  NMaskGen.yaml  README.md  pyproject.toml
config/: config.yaml
example_data/: README.txt  example_ref.fasta
example_data/new_results/: nmask.fasta
example_data/output/: NMask.fasta  base_changes.tsv
example_data/output/pseudolin_1/: pseudolin_1_genomes.fasta  pseudolin_1_pseudoref.bed  pseudolin_1_pseudoref.fasta
example_data/output/pseudolin_2/: pseudolin_2_genomes.fasta  pseudolin_2_pseudoref.fasta
example_data/output/pseudolin_3/: pseudolin_3_genomes.fasta  pseudolin_3_pseudoref.bed  pseudolin_3_pseudoref.fasta
example_data/output/pseudolin_4/: pseudolin_4_genomes.fasta  pseudolin_4_pseudoref.bed  pseudolin_4_pseudoref.fasta
example_data/results/: combined.bed  nmask.fasta
example_data/results/bedfiles/: clade2.bed
example_data/results/combined/: clade1.fasta  clade2.fasta  clade3.fasta  clade4.fasta
example_data/results/consensus/: clade1.fasta  clade2.fasta  clade3.fasta  clade4.fasta
example_data/results/msa/: clade1.fasta  clade2.fasta  clade3.fasta  clade4.fasta
example_data/results/repaired/: clade1.fasta  clade2.fasta  clade3.fasta  clade4.fasta
example_data/sequences/: clade1.fasta  clade2.fasta  clade3.fasta  clade4.fasta
nmaskgen/: bed_file_concatinator.py  consensus_gen.py  main.py  mask_gen.py  no_ref_mask.py  repair.py
workflow/: Snakefile
workflow/scripts/: bed_file_cat.py  bed_file_concatinator.py  bed_file_gen.py  consensus_gen.py  mask_gen.py  repair.py  seq_cat.py
(+44 files in other folders)
