[tool.poetry]
name = "nmaskgen"
version = "0.1.0"
description = ""
authors = ["ChrisgKent <chrisgkent@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
black = "^21.11b1"
biopython = "^1.79"
progress = "^1.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nmaskgen = "nmaskgen.main:main"
